exports[`(.not).toHaveMovedPermanentlyStatus > using axios > .not.toHaveMovedPermanentlyStatus > fails when response have status code 301 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveMovedPermanentlyStatus()</intensity>

Expected status code to not be 301 received:
  <red>301</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 301,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveMovedPermanentlyStatus > using axios > .toHaveMovedPermanentlyStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveMovedPermanentlyStatus()</intensity>

Expected status code to be 301 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
